2005-05-12  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c: Use asm_setjmp and asm_longjmp on Win32.

2005-04-28  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (verbose_trace): Delete variable.
        (sim_open): Don't set verbose_trace.

2005-04-28  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (m68k_go_sim): Use ti68k_step_over_noflush instead of ti68k_debug_step_over.

2005-04-15  Kevin Kofler  <Kevin@tigcc.ticalc.org>
      * Revert:
        2005-04-01  Kevin Kofler  <Kevin@tigcc.ticalc.org>
                * interp.c (sim_write): Call fill_prefetch_0 and gdbcallback_refresh_debugger after writing.

2005-04-12  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * ../common/callback.c (truncate, ftruncate): Disable (always return 1), as we don't need
                                                    them and they don't build on MinGW.

2005-04-11  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c: Don't include syscall.h.

2005-04-01  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (m68k_go_sim): Handle step_over_calls directly.
        (m68k_sim_supervisor_mode_p): New function.

2005-04-01  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (sim_write): Call fill_prefetch_0 and gdbcallback_refresh_debugger after writing.

2005-03-30  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (sim_resume): Call gdbcallback_disable_debugger and gdbcallback_enable_debugger.
        (sim_fetch_register): Use m68k_getpc for %pc.
        (sim_store_register): Use m68k_setpc for %pc.
        (sim_create_inferior, sim_resume): Delete regs.pc kludge.

2005-03-30  Kevin Kofler  <Kevin@tigcc.ticalc.org>

      * interp.c (saved_state): Delete variable.
        (MMASKB, RAISE_EXCEPTION, sim_create_inferior, init_pointers, sim_stop_reason, sim_resume, sim_fetch_register,
         sim_store_register): Use regs instead of saved_state.
        (sim_create_inferior, sim_resume): Don't copy regs to saved_state.