@@ -1,3 +1,7 @@
+2005-06-02  Kevin Kofler  <Kevin@tigcc.ticalc.org>
+
+        * ../common/aclocal.m4, ../common/configure, configure: Fix libintl detection.
+
 2005-05-12  Kevin Kofler  <Kevin@tigcc.ticalc.org>
 
       * interp.c: Use asm_setjmp and asm_longjmp on Win32.
